--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: android
 
-addons:
-  artifacts = true
-  s3_region = "us-west-2"
+#addons:
+#  artifacts = true
+#  s3_region = "us-west-2"
 
 android:
   components:
@@ -12,7 +12,7 @@ android:
     # - tools
 
     # The BuildTools version used by your project
-    - build-tools-23.0.2
+    - build-tools-23.0.1
     # The SDK version used to compile your project
     - android-23
     - android-22
@@ -54,5 +54,5 @@ script:
 #after_success:
 #  - codecov
 
-deploy:
-  skip_cleanup: true
+#deploy:
+#  skip_cleanup: true
