--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: android
 
-#addons:
-#  artifacts = true
-#  s3_region = "us-west-2"
+addons:
+  artifacts = true
+  s3_region = "us-west-2"
 
 android:
   components:
@@ -16,8 +16,6 @@ android:
     # The SDK version used to compile your project
     - android-23
     - android-22
-
-#   - something
     # Additional components
     #- extra-google-google_play_services
     #- extra-google-m2repository
@@ -45,15 +43,16 @@ env:
     - ANDROID_SDKS=android-15 ANDROID_TARGET=android-15 ANDROID_ABI=armeabi-v7a
 # Emulator Management: Create, Start and Wait
 before_script:
-  - echo no | android create avd --force -n android-card-form-test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
 script:
   - ./gradlew build connectedCheck --info
+
 #after_success:
 #  - codecov
 
-#deploy:
-#  skip_cleanup: true
+deploy:
+  skip_cleanup: true
